# qoembed

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
example/: CMakeLists.txt  example01.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  QOEmbedConfig.cmake.in  error.cpp  error.h  jsonparser.cpp  jsonparser.h  link.cpp  link.h  oembedmanager.cpp  oembedmanager.h  photo.cpp  photo.h  provider.cpp  provider.h  qoembed_global.h  request.cpp  request.h  response.cpp  response.h  rich.cpp  rich.h  video.cpp  video.h  xmlparser.cpp  xmlparser.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  jsonparsertest.cpp  oembedmanagertest.cpp  providertest.cpp  requesttest.cpp
